feat(deleteCalendar): Adding of a sliding button to delete a specific calendar #20
