# server/routes/calendars/calendars.go
@@ -6,12 +6,14 @@ import (
 	"server/models"
 
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 )
 
 func Routes(route *gin.Engine) {
 	calendars := route.Group("/calendars")
 	{
 		calendars.GET("", get_calendars)
+		calendars.DELETE("/:id", delete_calendar)
 	}
 }
 
@@ -30,4 +32,27 @@ func get_calendars(context *gin.Context) {
 		return
 	}
 	context.JSON(http.StatusOK, calendars)
+}
+
+// delete_calendar deletes a calendar by ID
+// @Summary Delete a calendar
+// @Description Delete a calendar by ID from DB
+// @Tags Calendars
+// @Produce json
+// @Param id path int true "Calendar ID"
+// @Success 200 {string} string "Calendar deleted successfully"
+// @Failure 404 "Calendar not found"
+// @Failure 500 "Internal Server Error"
+// @Router /calendars/{id} [delete]
+func delete_calendar(context *gin.Context) {
+	id := context.Param("id")
+	if err := initializers.DB.Delete(&models.Calendar{}, id).Error; err != nil {
+		if err == gorm.ErrRecordNotFound {
+			context.JSON(http.StatusNotFound, gin.H{"error": "Calendar not found"})
+		} else {
+			context.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		}
+		return
+	}
+	context.JSON(http.StatusOK, gin.H{"message": "Calendar deleted successfully"})
 }
